2004-09-02 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_macro.cc, cli/cmd_macro.h, cli/input.cc,
	cli/parse.yy, cli/scan.ll: Added support for parameterized
	macros. This is not completed


2004-09-02 Borut Razem <borut.razem@siol.net>
	* cli/input.cc, cli/socket.cc: socket port to WIN32
	* gpsim/gpsim.vcproj, cli/cli.vcproj, cli/makefile.mingw,
	  gpsim/makefile.mingw: added cmd_macro.* and socket.cc to
	  the project, wsock32.lib dependency

2004-09-01 Scott Dattalo <scott@dattalo.com>
	* cli/parse.yy: Fixed a bug that caused old versions of bison
	to choke.
	
2004-09-01 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_macro.cc, cli/input.cc:
	Converted the LLInput struct into a class. Now, the macro
	command can invoke a macro and redirect it's output to the
	parser stream.
	* src/trace.cc, src/trace.h:
	Added the ProcessorTraceObject to the TraceObject heirarchy.
	Now, TraceObjects no longer store info about a processor.
	(Thus modules can be processor agnostic.)
	
2004-09-01 Scott Dattalo <scott@dattalo.com>
	* src/p16x5x.cc: The 16C55 processor was only declaring a 
	package of 18 pins (instead of 28).

2004-08-31 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_macro.cc, cli/cmd_macro.h:
	Added the 'macro' command.
	* cli/Makefile.am, cli/parse.yy, cli/command.cc, cli/scan.ll:
	Parser now calls the gpsim command cmd_macro.
	
2004-08-31 Scott Dattalo <scott@dattalo.com>
	* cli/scan.ll, cli/parse.yy:
	Added language support for macro definitions. (although,
	macros are not yet supported).
	
2004-08-29 Borut Razem <borut.razem@siol.net>
	* plat/win32/gsim.def, cli/makefile.migw, src/makefile.migw,
	  cli/cli.vcproj, src/src.vcproj: updated
	* cli/errors.h, cli/scan.ll: corrected include paths
	* plat/win32/gpsim.nsi: gpsom.pdf included in WIN32 setup
	* doc/gpsimWin32.html: gtk+ 2.4.7

2004-08-27 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc, src/gpsim_object.cc, src/gpsim_object.h,
	  src/modules.cc, src/modules.h, src/pic-processor.cc,